2020-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add another usage example

2019-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars (PKG_CXXFLAGS): Use no-rtti define for Rcpp

2019-10-12  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Add CRAN usage badge

2019-08-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * inst/tinytest/test_simple.R: Add new 'isStupid' test

2019-08-29  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.6

2019-08-24  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

        * DESCRIPTION: Suggests on tinytest now '(>= 1.0.0)'

        * tests/tinytests.R: Check for tinytest '(>= 1.0.0)'

        * inst/tinytest/test_simple.R: Add two more tests

        * vignettes/rmd/anytime-intro.Rmd: Updated
        * vignettes/anytime-intro.pdf: Idem

2019-08-23  Dirk Eddelbuettel  <edd@debian.org>

        * src/anytime.cpp (ptToDoubleUTC): One more #nocov tag

2019-08-18  Dirk Eddelbuettel  <edd@debian.org>

        * inst/tinytest/test_all_formats.R: Small refactoring

2019-08-16  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Suggests on tinytest now '(>= 0.9.6.13)'

        * tests/tinytest.R: Now with parallel execution and side effect

        * inst/tinytest/test_all_formats.R: Now uses tinytest::exit_file()
        * inst/tinytest/test_bulk.R: Idem
        * inst/tinytest/test_simple.R: Idem

2019-08-14  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Add section on example uses

2019-08-12  Dirk Eddelbuettel  <edd@debian.org>

        * inst/tinytest/hide/test_r_format.R: Moved as zero active tests
        * inst/tinytest/hide/test_gh_issues_36_51.R: Ditto

2019-08-10  Dirk Eddelbuettel  <edd@debian.org>

        * src/anytime.cpp: Add missing commas in format definition

        * vignettes/rmd/anytime-intro.Rmd: Some more edits