@@ -10,18 +10,17 @@
 anytime(x, tz = getTZ(), asUTC = FALSE,
   useR = getOption("anytimeUseRConversions", FALSE),
   oldHeuristic = getOption("anytimeOldHeuristic", FALSE),
-  calcUinque = FALSE)
+  calcUnique = FALSE)
 
 anydate(x, tz = getTZ(), asUTC = FALSE,
-  useR = getOption("anytimeUseRConversions", FALSE),
-  calcUinque = FALSE)
+  useR = getOption("anytimeUseRConversions", FALSE), calcUnique = FALSE)
 
 utctime(x, tz = getTZ(), useR = getOption("anytimeUseRConversions", FALSE),
   oldHeuristic = getOption("anytimeOldHeuristic", FALSE),
-  calcUinque = FALSE)
+  calcUnique = FALSE)
 
 utcdate(x, tz = getTZ(), useR = getOption("anytimeUseRConversions", FALSE),
-  calcUinque = FALSE)
+  calcUnique = FALSE)
 }
 \arguments{
 \item{x}{A vector of type character, integer or numeric with date(time)
@@ -53,15 +52,13 @@ the default value \code{FALSE} is seen, then numeric values are used as offsets
 dates (in \code{anydate} or \code{utcdate}), and as second offsets for datetimes
 otherwise. A default value can also be set via the \code{anytimeOldHeuristic} option.}
 
-
-\item{calclUnique}{A logical value with a default value of \code{FALSE} that tells the
-function to perform the underlying \code{anytime()} calculation only once for each
-unique value in the \code{x} vector. It results in no difference in inputs or outputs,
-but it can result in a significant speed increases for long vectors where each
-element of \code{x} appears more than once. However, it will result in a slight decrease
-in speed for input vectors where each timestamp is already unique.}
+\item{calcUnique}{A logical value with a default value of \code{FALSE} that tells the
+function to perform the \code{anytime()} or \code{anydate()} calculation only once for
+each unique value in the \code{x} vector. It results in no difference in inputs or
+outputs, but can result in a significant speed increases for long vectors where each
+timestamp appears more than once. However, it will result in a slight slow down for
+input vectors where each timestamp appears only once.}
 }
-
 \value{
 A vector of \code{POSIXct} elements, or, in the case of \code{anydate},
 a vector of \code{Date} objects.
